# agent-kernel

./: .gitignore  README.md  config.toml.example  pyproject.toml  requirements.txt
app/: db.py  guest_context.py  runtime.py
app/rag/: ingest.py  store.py
db/: dining_reservations.csv  folio_transactions.csv  guest_profiles.csv  seed_db.py
db/kb/: 01_knowledge_agent_kb.md  02_dining_agent_kb.md  03_entertainment_agent_kb.md  04_spa_wellness_kb.md  05_port_agent_kb.md  06_excursion_agent_kb.md  07_loyalty_agent_kb.md  08_billing_agent_kb.md  09_service_agent_kb.md  10_booking_agent_kb.md  11_data_agent_kb.md  12_escalation_feedback_kb.md
db/rag/: exp_dining_young_children.md  exp_embarkation_wifi.md  exp_grand_cayman_tender.md  exp_motion_sickness.md  exp_spa_sea_days.md
mcp/: dining_api.py  dining_mcp_server.py
plugins/: dynamic_datetime_now.py  dynamic_rag_context.py  memory_file.py  static_file_bible.py  static_kb_directory.py  ui_rich_cli.py  ui_web.py  ui_websocket.py  ui_websocket_client.html
plugins/tools/: deep_think.py  emergency.py  hello.py  think.py
scripts/: eval_rag.py
src/: agent.py  cli.py  config.py  context.py  interfaces.py  llm.py  mcp_client.py  server.py  summarizer.py  tool_loader.py
